# lightcontrol

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Doxyfile  DoxygenLayout.xml  FORMAT.md  Makefile  README.md  ROADMAP.md  TODO.md  control.c  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dynarray_8h.html  dynarray_8h_source.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  group__dynarray.html  group__packet.html  index.html  md_FORMAT.html  modules.html  packet.c  packet_8h.html  packet_8h_source.html  pages.html  serial.c  serial.h  serial_8h_source.html  serial__debug_8h_source.html  serial__linux_8h_source.html  serial__win_8h_source.html  structdynarray-members.html  structdynarray.html  structpacket-members.html  structpacket.html
control/: CMakeLists.txt
control/include/: serial_debug.h
control/src/: main.c  serial_debug.c  serial_linux.c
hardware/: Makefile  main.c  packet.h
include/: serial.h  serial_linux.h  serial_win.h
search/: all_0.js  all_1.js  all_2.js  all_4.js  all_6.js  classes_0.js  classes_1.js  functions_1.js  functions_2.js  groups_0.js  groups_1.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js  variables_5.js
src/: control.c  dynarray.c  dynarray.h  keyvalue.c  keyvalue.h  main.c  packet.c  packet.h  serial.c  serial.h  serial_debug.c  serial_debug.h  serial_linux.c  serial_linux.h  serial_win.c  serial_win.h
test/: CMakeLists.txt  Makefile
test/cmake/Modules/: FindCMocka.cmake
test/src/: main.c
(+2 files in other folders)
